--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
     </div>
 
     <div class="achievement-card">
-      <p class="achievement-number">8</p>
-      <p class="achievement-label">対応分野</p>
+      <p class="achievement-number">7</p>
+      <p class="achievement-label">運営メンバー</p>
     </div>
   </div>
 
@@ -130,6 +130,7 @@
 <script type="module" src="auth_header.js"></script>
 </body>
 </html>
+
 
 
 
