--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </div>
 
     <div class="achievement-card">
-      <p class="achievement-number">300+</p>
+      <p class="achievement-number">7</p>
       <p class="achievement-label">登録卒業生</p>
     </div>
 
@@ -130,6 +130,7 @@
 <script type="module" src="auth_header.js"></script>
 </body>
 </html>
+
 
 
 
