--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   </div>
 
   <p class="achievement-note">
-    SenpaiNetはISSを卒業したあとも在校生との繋がりを持てるコミュニティを目指します。皆様のご協力よろしくお願いします。
+    SenpaiNetはISSを卒業したあとも在校生との繋がりを持てるコミュニティを目指します。皆様のご協力よろしくお願いいたします。
   </p>
 </section>
 
@@ -130,6 +130,7 @@
 <script type="module" src="auth_header.js"></script>
 </body>
 </html>
+
 
 
 
