--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <div class="container">
         <h2>お問い合わせ</h2>
 
-        <p class="section-lead">ご質問やコラボ依頼などお気軽にお問合せください。</p>
+        <p class="section-lead">お気軽にお問合せください。</p>
 
         <form class="contact-form">
           <input type="text" name="name" placeholder="お名前" required>
@@ -130,6 +130,7 @@
 <script type="module" src="auth_header.js"></script>
 </body>
 </html>
+
 
 
 
