--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
           <div class="qa-card">
             <h3>他の相談を見る</h3>
-            <p>他の在校生の相談を読むことで、「一人じゃない」と感じられます。</p>
+            <p>すでに投稿されている内容を閲覧することができます。</p>
             <a href="archive.html" class="btn btn-outline">投稿一覧を開く</a>
           </div>
 
@@ -130,6 +130,7 @@
 <script type="module" src="auth_header.js"></script>
 </body>
 </html>
+
 
 
 
