--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
           <div class="qa-card">
             <h3>相談を投稿する</h3>
-            <p>受験・勉強・進路のモヤモヤを、匿名で投稿できます。</p>
+            <p>あらゆる相談内容を、先輩に匿名で投稿できます。</p>
             <a href="post.html" class="btn btn-main">＋ 新しい相談を投稿</a>
           </div>
 
@@ -130,6 +130,7 @@
 <script type="module" src="auth_header.js"></script>
 </body>
 </html>
+
 
 
 
