--- a/archive.html
+++ b/archive.html
@@ -32,6 +32,14 @@
           <input type="text" id="keywordInput" placeholder="キーワードまたはタグを選択" autocomplete="off">
           <button id="searchBtn">検索</button>
         </div>
+<!-- タグフィルター -->
+    <div class="tag-filter" id="tagFilter">
+      <span class="filter-tag" data-tag="履修">#履修</span>
+      <span class="filter-tag" data-tag="進路">#進路</span>
+      <span class="filter-tag" data-tag="学校生活">#学校生活</span>
+      <span class="filter-tag" data-tag="課外活動">#課外活動</span>
+    </div>
+
         <div id="searchTagArea" class="search-tag-area"></div>
       </div>
 
@@ -46,3 +54,4 @@
 <script type="module" src="auth_header.js"></script> <script type="module" src="archive.js"></script>
 </body>
 </html>
+
