--- a/senpai-list.html
+++ b/senpai-list.html
@@ -162,12 +162,13 @@
         // ここに自分のFirebase Configを貼り付けてください
         // ▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲
         const firebaseConfig = {
-            apiKey: "AIzaSy...", 
-            authDomain: "...",
-            projectId: "...",
-            storageBucket: "...",
-            messagingSenderId: "...",
-            appId: "..."
+          apiKey: "AIzaSyCwPtYMU_xiM5YgcqfNsCFESkj-Y4ICD5E",
+          authDomain: "senpainet-84a24.firebaseapp.com",
+          projectId: "senpainet-84a24",
+          storageBucket: "senpainet-84a24.firebasestorage.app",
+          messagingSenderId: "1053589632945",
+          appId: "1:1053589632945:web:413919be47760675e4ef90",
+          measurementId: "G-1GPKNSMMFZ"
         };
 
         // アプリの初期化
