--- a/archive.html
+++ b/archive.html
@@ -32,13 +32,28 @@
           <input type="text" id="keywordInput" placeholder="キーワードまたはタグを選択" autocomplete="off">
           <button id="searchBtn">検索</button>
         </div>
-<!-- タグフィルター -->
-    <div class="tag-filter" id="tagFilter">
-      <span class="filter-tag" data-tag="履修">#履修</span>
-      <span class="filter-tag" data-tag="進路">#進路</span>
-      <span class="filter-tag" data-tag="学校生活">#学校生活</span>
-      <span class="filter-tag" data-tag="課外活動">#課外活動</span>
-    </div>
+        
+        <div class="tag-filter" id="tagFilter">
+          <span class="filter-tag" data-tag="一般入試">#一般入試</span>
+          <span class="filter-tag" data-tag="AO入試">#AO入試</span>
+          <span class="filter-tag" data-tag="DP">#DP</span>
+          <span class="filter-tag" data-tag="課外活動">#課外活動</span>
+          <span class="filter-tag" data-tag="履修">#履修</span>
+          <span class="filter-tag" data-tag="海外大学">#海外大学</span>
+          <span class="filter-tag" data-tag="部活">#部活</span>
+          <span class="filter-tag" data-tag="英検">#英検</span>
+          <span class="filter-tag" data-tag="IELTS">#IELTS</span>
+          <span class="filter-tag" data-tag="TOEFL">#TOEFL</span>
+          <span class="filter-tag" data-tag="模試">#模試</span>
+          <span class="filter-tag" data-tag="教育">#教育</span>
+          <span class="filter-tag" data-tag="キャリア">#キャリア</span>
+          <span class="filter-tag" data-tag="AI">#AI</span>
+          <span class="filter-tag" data-tag="海外">#海外</span>
+          <span class="filter-tag" data-tag="テクノロジー">#テクノロジー</span>
+          <span class="filter-tag" data-tag="理系">#理系</span>
+          <span class="filter-tag" data-tag="文系">#文系</span>
+          <span class="filter-tag" data-tag="ボランティア">#ボランティア</span>
+        </div>
 
         <div id="searchTagArea" class="search-tag-area"></div>
       </div>
@@ -54,4 +69,3 @@
 <script type="module" src="auth_header.js"></script> <script type="module" src="archive.js"></script>
 </body>
 </html>
-
