--- a/form.html
+++ b/form.html
@@ -13,59 +13,42 @@
       <a href="index.html" class="logo-link">
         <img src="senpainet logo.png" alt="SenpaiNetロゴ" class="logo-img">
       </a>  
-      <form class="search-form">
-        <span class="material-icons">search</span>
-        <input type="text" placeholder="相談内容を検索" name="search">
-      </form>
       <div class="auth-buttons">
-        <a href="#" class="btn login-btn"><span class="material-icons">login</span> ログイン</a>
-        <a href="#" class="btn register-btn"><span class="material-icons">person_add</span> 新規登録</a>
+        <a href="login.html" class="btn login-btn"><span class="material-icons">login</span> ログイン</a>
+        <a href="signup.html" class="btn register-btn"><span class="material-icons">person_add</span> 新規登録</a>
       </div>
     </div>
-    <!-- ナビゲーションバー -->
-<nav class="navbar">
-  <ul>
-    <li>
-      <a href="form.html">
-        <span class="material-icons nav-icon">edit_note</span>
-        <span class="nav-label">相談する</span>
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        <span class="material-icons nav-icon">list_alt</span>
-        <span class="nav-label">相談一覧</span>
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        <span class="material-icons nav-icon">category</span>
-        <span class="nav-label">カテゴリ</span>
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        <span class="material-icons nav-icon">info</span>
-        <span class="nav-label">SenpaiNetについて</span>
-      </a>
-    </li>
-  </ul>
-</nav>
-</header>
+    <nav class="navbar">
+      <ul>
+        <li><a href="post.html"><span class="material-icons nav-icon">edit_note</span><span class="nav-label">相談する</span></a></li>
+        <li><a href="archive.html"><span class="material-icons nav-icon">list_alt</span><span class="nav-label">相談一覧</span></a></li>
+        <li><a href="senpai.html"><span class="material-icons nav-icon">school</span><span class="nav-label">先輩一覧</span></a></li>
+        <li><a href="index.html#about"><span class="material-icons nav-icon">info</span><span class="nav-label">SenpaiNetについて</span></a></li>
+      </ul>
+    </nav>
+  </header>
 
 <section class="consult-form-section" id="consult-form-section">
-  <h2>SenpaiNet相談フォーム</h2>
+  <h2>📮 お問い合わせ・運営へ相談</h2>
+  <p style="text-align:center; font-size:0.9rem; color:#666; margin-bottom:20px;">
+    サイトの不具合や運営へのご連絡はこちらから。<br>
+    先輩への進路相談は <a href="post.html">相談投稿ページ</a> をご利用ください。
+  </p>
+
   <form id="consultForm">
     <label>
       カテゴリ
       <select name="category" required>
         <option value="">選択してください</option>
-        <option value="一般入試">一般入試</option>
-        <option value="AO入試">AO入試</option>
-        <option value="DP">DP</option>
+        <option value="不具合報告">不具合報告</option>
+        <option value="アカウント関連">アカウント関連</option>
+        <option value="一般入試">一般入試について</option>
+        <option value="AO入試">AO入試について</option>
+        <option value="海外大学">海外大学について</option>
         <option value="その他">その他</option>
       </select>
     </label>
+    
     <label>
       学年
       <select name="grade" required>
@@ -76,54 +59,40 @@
         <option value="4年生">4年生</option>
         <option value="5年生">5年生</option>
         <option value="6年生">6年生</option>
+        <option value="保護者">保護者</option>
+        <option value="その他">その他</option>
       </select>
     </label>
+
     <label>
-      相談内容
-      <textarea name="content" rows="5" required placeholder="相談したい内容を入力してください"></textarea>
+      お問い合わせ内容
+      <textarea name="content" rows="5" required placeholder="詳細を入力してください"></textarea>
     </label>
-    <button type="submit">送信</button>
+
+    <button type="submit">送信する</button>
   </form>
   <div id="consultMessage"></div>
 </section>
 
 <script>
 document.addEventListener('DOMContentLoaded', function() {
-  // フォームの送信イベントを取得
   const form = document.getElementById('consultForm');
   const message = document.getElementById('consultMessage');
 
   form.addEventListener('submit', function(e) {
     e.preventDefault();
-
-    // ここで送信処理（fetchなど）を行う
-    // 例：Google Apps Scriptに送信する場合
-    const data = {
-      category: form.category.value,
-      grade: form.grade.value,
-      content: form.content.value
-    };
-
-    fetch('YOUR_SCRIPT_URL', {
-      method: 'POST',
-      body: JSON.stringify(data),
-      headers: { 'Content-Type': 'application/json' }
-    })
-    .then(res => res.text())
-    .then(res => {
-      // フォームを非表示に
-      form.style.display = "none";
-      // メッセージを中央に表示
-      message.textContent = "相談内容が送信されました。ご相談ありがとうございます！";
-    })
-    .catch(err => {
-      message.textContent = "送信に失敗しました。もう一度お試しください。";
-    });
+    // 送信処理（実際にはGoogleフォームやApps Scriptのエンドポイントを設定）
+    form.style.display = "none";
+    message.innerHTML = `
+      <div style="text-align:center; padding:20px;">
+        <span class="material-icons" style="font-size:3rem; color:#4da6ff;">check_circle</span>
+        <p>送信されました。<br>お問い合わせありがとうございます。</p>
+        <a href="index.html" style="color:#333; text-decoration:underline;">ホームに戻る</a>
+      </div>
+    `;
   });
 });
 </script>
-
-
 
 </body>
 </html>
