--- a/archive.html
+++ b/archive.html
@@ -15,10 +15,10 @@
 
       <nav class="navbar-menu">
         <a href="post.html">相談する</a>
-        <a href="archive.html" class="active">相談を見る</a>
-        <a href="#">実績</a>
-        <a href="#">お問い合わせ</a>
-        <a href="#" class="account-btn">ログイン</a>
+        <a href="archive.html">相談を見る</a>
+        <a href="senpai.html">先輩一覧</a>
+        <a href="form.html">お問い合わせ</a>
+        <a href="#" class="account-btn">ログイン</a>  
       </nav>
     </div>
   </header>
@@ -69,3 +69,4 @@
 <script type="module" src="auth_header.js"></script> <script type="module" src="archive.js"></script>
 </body>
 </html>
+
