--- a/detail2.html
+++ b/detail2.html
@@ -94,7 +94,8 @@
       <nav class="navbar-menu">
         <a href="post.html">相談する</a>
         <a href="archive.html" class="active">相談を見る</a>
-        <a href="#">実績</a>
+        <a href="senpai.html">先輩一覧</a>
+       
         <a href="#">お問い合わせ</a>
         <a href="#" class="account-btn">ログイン</a>
       </nav>
