--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
      
       <a href="post.html">相談する</a>
       <a href="archive.html">相談を見る</a>
-      <a href="#">実績</a>
+      <a href="senpai.html">先輩一覧</a>
       <a href="#">お問い合わせ</a>
       <a href="signup.html" class="account-btn">👤 アカウント</a>
     </nav>
@@ -131,6 +131,7 @@
 <script type="module" src="auth_header.js"></script>
 </body>
 </html>
+
 
 
 
