--- a/profile.html
+++ b/profile.html
@@ -148,6 +148,7 @@
       <nav class="navbar-menu">
         <a href="post.html">相談する</a>
         <a href="archive.html">相談を見る</a>
+        <a href="senpai.html">先輩一覧</a>
         <a href="#" id="logoutBtn" class="account-btn" style="background:#ff6b6b; border:none;">ログアウト</a>
       </nav>
     </div>
@@ -290,3 +291,4 @@
   <script type="module" src="profile.js"></script>
 </body>
 </html>
+
