--- a/senpai.html
+++ b/senpai.html
@@ -38,7 +38,7 @@
       <nav class="navbar-menu">
         <a href="post.html">相談する</a>
         <a href="archive.html">相談を見る</a>
-        <a href="senpai.html" class="active" style="color:#2563eb;">My先輩リスト</a>
+        <a href="senpai.html">先輩一覧</a>
         <a href="#" class="account-btn">ログイン</a>
       </nav>
     </div>
