--- a/profile.html
+++ b/profile.html
@@ -284,14 +284,25 @@
       <div class="edit-mode-area" id="tagsEditArea">
           <p style="margin-bottom:15px; color:#666;">最大3つまで選択できます。</p>
           <div class="selection-container" id="tagSelectionContainer">
-            <span class="tag-option-btn" data-tag="教育">#教育</span>
-            <span class="tag-option-btn" data-tag="キャリア">#キャリア</span>
-            <span class="tag-option-btn" data-tag="AI">#AI</span>
-            <span class="tag-option-btn" data-tag="海外">#海外</span>
-            <span class="tag-option-btn" data-tag="テクノロジー">#テクノロジー</span>
-            <span class="tag-option-btn" data-tag="ボランティア">#ボランティア</span>
-            <span class="tag-option-btn" data-tag="理系">#理系</span>
-            <span class="tag-option-btn" data-tag="文系">#文系</span>
+             <span class="tag-option" data-tag="一般入試">#一般入試</span>
+            <span class="tag-option" data-tag="AO入試">#AO入試</span>
+            <span class="tag-option" data-tag="DP">#DP</span>
+            <span class="tag-option" data-tag="課外活動">#課外活動</span>
+            <span class="tag-option" data-tag="履修">#履修</span>
+            <span class="tag-option" data-tag="海外大学">#海外大学</span>
+            <span class="tag-option" data-tag="部活">#部活</span>
+            <span class="tag-option" data-tag="英検">#英検</span>
+            <span class="tag-option" data-tag="IELTS">#IELTS</span>
+            <span class="tag-option" data-tag="TOEFL">#TOEFL</span>
+            <span class="tag-option" data-tag="模試">#模試</span>
+            <span class="tag-option" data-tag="教育">#教育</span>
+            <span class="tag-option" data-tag="キャリア">#キャリア</span>
+            <span class="tag-option" data-tag="AI">#AI</span>
+            <span class="tag-option" data-tag="海外">#海外</span>
+            <span class="tag-option" data-tag="テクノロジー">#テクノロジー</span>
+            <span class="tag-option" data-tag="理系">#理系</span>
+            <span class="tag-option" data-tag="文系">#文系</span>
+            <span class="tag-option" data-tag="ボランティア">#ボランティア</span>
           </div>
           <div class="action-buttons">
               <button class="cancel-btn" id="tagsCancelBtn">キャンセル</button>
@@ -333,3 +344,4 @@
   <script type="module" src="profile.js"></script>
 </body>
 </html>
+
