--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>ログイン | 未来図プラットフォーム</title>
+  <title>ログイン | SenpaiNet</title>
   <link rel="stylesheet" href="signup.css">
   <style>
     /* Googleボタン用の追加スタイル */
