--- a/archive.html
+++ b/archive.html
@@ -102,6 +102,7 @@
           <span class="filter-tag" data-tag="理系">#理系</span>
           <span class="filter-tag" data-tag="文系">#文系</span>
           <span class="filter-tag" data-tag="ボランティア">#ボランティア</span>
+          <span class="filter-tag" data-tag="帰国生">#帰国生</span>
         </div>
 
         <div id="searchTagArea" class="search-tag-area"></div>
@@ -119,3 +120,4 @@
   <script type="module" src="archive.js"></script>
 </body>
 </html>
+
