--- a/login.html
+++ b/login.html
@@ -63,7 +63,9 @@
       </div>
     </div>
   </div>
-
+<div class="back-to-home">
+    <a href="index.html" class="btn-home">ホームに戻る</a>
+</div>
   <script type="module" src="login.js"></script>
 </body>
 </html>
