--- a/index.html
+++ b/index.html
@@ -81,25 +81,26 @@
 
   <div class="achievement-cards">
     <div class="achievement-card">
-      <p class="achievement-number">4</p>
+      <p class="achievement-number" data-target="4">0</p>
       <p class="achievement-label">相談投稿数</p>
     </div>
 
     <div class="achievement-card">
-      <p class="achievement-number">0</p>
+      <p class="achievement-number" data-target="0">0</p>
       <p class="achievement-label">登録在学生</p>
     </div>
 
     <div class="achievement-card">
-      <p class="achievement-number">7</p>
+      <p class="achievement-number" data-target="7">0</p>
       <p class="achievement-label">登録卒業生</p>
     </div>
 
     <div class="achievement-card">
-      <p class="achievement-number">7</p>
+      <p class="achievement-number" data-target="7">0</p>
       <p class="achievement-label">運営メンバー</p>
     </div>
   </div>
+</section>
 
   <p class="achievement-note">
     SenpaiNetはISSを卒業したあとも在校生との繋がりを持てるコミュニティを目指します。皆様のご協力よろしくお願いいたします。
@@ -141,6 +142,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
