--- a/index.html
+++ b/index.html
@@ -140,8 +140,10 @@
   </div>
   <p style="margin-top: 30px; color: #64748b; font-size: 0.8rem;">© 2025 SenpaiNet. All Rights Reserved.</p>
 </footer>
+<script src="script.js"></script>
 </body>
 </html>
+
 
 
 
