--- a/login.html
+++ b/login.html
@@ -4,6 +4,20 @@
   <meta charset="UTF-8">
   <title>ログイン | SenpaiNet</title>
   <link rel="stylesheet" href="signup.css">
+  <header class="navbar fade-down">
+  <div class="navbar-container">
+    <div class="navbar-logo">SenpaiNet</div>
+
+    <nav class="navbar-menu">
+     
+      <a href="post.html">相談する</a>
+      <a href="archive.html">相談を見る</a>
+      <a href="senpai.html">先輩一覧</a>
+      <a href="#">お問い合わせ</a>
+      <a href="signup.html" class="account-btn">👤 アカウント</a>
+    </nav>
+  </div>
+</header>
   <style>
     /* Googleボタン用の追加スタイル */
     .google-btn {
