--- a/login.html
+++ b/login.html
@@ -8,16 +8,22 @@
   <div class="navbar-container">
     <div class="navbar-logo">SenpaiNet</div>
 
-    <nav class="navbar-menu">
-     
-      <a href="post.html">相談する</a>
-      <a href="archive.html">相談を見る</a>
-      <a href="senpai.html">先輩一覧</a>
-      <a href="#">お問い合わせ</a>
-      <a href="signup.html" class="account-btn">👤 アカウント</a>
-    </nav>
-  </div>
-</header>
+  <header class="navbar">
+    <div class="navbar-container">
+      <div class="navbar-logo">
+        <a href="index.html">SenpaiNet</a>
+      </div>
+
+      <nav class="navbar-menu">
+        <a href="post.html">相談する</a>
+        <a href="archive.html">相談を見る</a>
+        <a href="senpai.html">先輩一覧</a>
+        <a href="form.html">お問い合わせ</a>
+        <a href="#" class="account-btn">ログイン</a>  
+      </nav>
+    </div>
+  </header>
+
   <style>
     /* Googleボタン用の追加スタイル */
     .google-btn {
