--- a/login.html
+++ b/login.html
@@ -61,7 +61,7 @@
       <h2>🔑 ログイン</h2>
 
       <button id="googleLoginBtn" class="google-btn">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" alt="G" width="20">
+        <img src="https://fonts.gstatic.com/s/i/productlogos/googleg/v6/24px.svg" alt="G" width="20">
         Googleでログイン
       </button>
 
