--- a/login.html
+++ b/login.html
@@ -3,26 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>ログイン | SenpaiNet</title>
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="signup.css">
-  <header class="navbar fade-down">
-  <div class="navbar-container">
-    <div class="navbar-logo">SenpaiNet</div>
-
-  <header class="navbar">
-    <div class="navbar-container">
-      <div class="navbar-logo">
-        <a href="index.html">SenpaiNet</a>
-      </div>
-
-      <nav class="navbar-menu">
-        <a href="post.html">相談する</a>
-        <a href="archive.html">相談を見る</a>
-        <a href="senpai.html">先輩一覧</a>
-        <a href="form.html">お問い合わせ</a>
-        <a href="#" class="account-btn">ログイン</a>  
-      </nav>
-    </div>
-  </header>
 
   <style>
     /* Googleボタン用の追加スタイル */
@@ -55,6 +37,26 @@
   </style>
 </head>
 <body class="signup-page">
+
+  <header class="navbar fade-down">
+  <div class="navbar-container">
+    <div class="navbar-logo">SenpaiNet</div>
+
+  <header class="navbar">
+    <div class="navbar-container">
+      <div class="navbar-logo">
+        <a href="index.html">SenpaiNet</a>
+      </div>
+
+      <nav class="navbar-menu">
+        <a href="post.html">相談する</a>
+        <a href="archive.html">相談を見る</a>
+        <a href="senpai.html">先輩一覧</a>
+        <a href="form.html">お問い合わせ</a>
+        <a href="#" class="account-btn">ログイン</a>  
+      </nav>
+    </div>
+  </header>
 
   <div class="signup-wrapper">
     <div class="signup-card">
