--- a/login.html
+++ b/login.html
@@ -76,7 +76,7 @@
         <label for="password">パスワード</label>
         <input type="password" id="password" placeholder="パスワード" required>
 
-        <button type="submit" class="submit-btn">ログインして開始</button>
+        <button type="submit" class="submit-btn">ログンして開始</button>
       </form>
 
       <div style="margin-top: 20px; text-align: center;">
