--- a/signup.html
+++ b/signup.html
@@ -26,6 +26,24 @@
 </head>
 <body class="signup-page">
 
+  <!-- ナビバー -->
+  <header class="navbar fade-down">
+    <div class="navbar-container">
+      <div class="navbar-logo">
+        <a href="index.html">SenpaiNet</a>
+      </div>
+
+      <nav class="navbar-menu">
+        <a href="post.html">相談する</a>
+        <a href="archive.html">相談を見る</a>
+        <a href="senpai.html">先輩一覧</a>
+        <a href="form.html">お問い合わせ</a>
+        <a href="login.html" class="account-btn">ログイン</a>
+      </nav>
+    </div>
+  </header>
+ 
+
   <div class="signup-wrapper">
     <div class="signup-card">
       <h2>👤 アカウントを作成</h2>
@@ -120,3 +138,4 @@
   <script type="module" src="signup.js"></script>
 </body>
 </html>
+
