--- a/signup.html
+++ b/signup.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>アカウント作成 | SenpaiNet</title>
   <link rel="stylesheet" href="signup.css">
+  <link rel="stylesheet" href="style.css">
+  
   <style>
     /* 追加スタイル: 用途説明のアコーディオンなど */
     .usage-note {
@@ -138,4 +140,5 @@
   <script type="module" src="signup.js"></script>
 </body>
 </html>
+
 
