--- a/signup.html
+++ b/signup.html
@@ -83,6 +83,9 @@
           <option>14回生</option>
           <option>15回生</option>
           <option>16回生</option>
+          <option>17回生</option>
+          <option>18回生</option>
+          <option>19回生</option>
         </select>
 
         <label>アイコンを選択</label>
@@ -140,5 +143,6 @@
   <script type="module" src="signup.js"></script>
 </body>
 </html>
+
 
 
