--- a/post.html
+++ b/post.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>SenpaiNet｜相談を投稿</title>
+  <title>相談を投稿｜SenpaiNet</title>
   <link rel="stylesheet" href="post.css">
   </head>
 
@@ -42,7 +42,7 @@
         </div>
 
         <div class="form-group">
-          <label>タグを選択</label>
+          <label>タグを選択（回答を得られやすくなります）</label>
           <div id="tagSelect" class="tag-select">
             <span class="tag-option" data-tag="一般入試">#一般入試</span>
             <span class="tag-option" data-tag="AO入試">#AO入試</span>
@@ -72,4 +72,5 @@
 <script type="module" src="auth_header.js"></script>
 </body>
 </html>
+
 
