--- a/post.html
+++ b/post.html
@@ -38,7 +38,7 @@
 
         <div class="form-group">
           <label for="content">内容</label>
-          <textarea id="content" rows="6" placeholder="詳しい相談内容を書いてください…" required></textarea>
+          <textarea id="content" rows="6" placeholder="個人情報は記入しないでください。誹謗中傷などに十分注意してください。" required></textarea>
         </div>
 
         <div class="form-group">
@@ -72,5 +72,6 @@
 <script type="module" src="auth_header.js"></script>
 </body>
 </html>
+
 
 
