--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
   </div>
   <div style="display: flex; justify-content: center; gap: 20px; font-size: 0.9rem;">
     <a href="terms.html" style="color: #94a3b8; text-decoration: none;">利用規約</a>
+    <a href="privacy.html" style="color: #94a3b8; text-decoration: none;">プライバシーポリシー</a>
     <a href="form.html" style="color: #94a3b8; text-decoration: none;">お問い合わせ</a>
   </div>
   <p style="margin-top: 30px; color: #64748b; font-size: 0.8rem;">© 2025 SenpaiNet. All Rights Reserved.</p>
@@ -143,6 +144,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
