--- a/terms.html
+++ b/terms.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>利用規約 | SenpaiNet</title>
+  <title>プライバシーポリシー | SenpaiNet</title>
   <link rel="stylesheet" href="style.css">
   <style>
     .terms-container {
@@ -35,13 +35,19 @@
 
     <p>この利用規約（以下，「本規約」といいます。）は，SenpaiNet運営チーム（以下，「運営」といいます。）がこのウェブサイト上で提供するサービス（以下，「本サービス」といいます。）の利用条件を定めるものです。登録ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本サービスをご利用いただきます。</p>
 
-    <h2>第1条（適用）</h2>
+    <h2>第1条（サービス内容）</h2>
+    <p>本サービスは、在校生・卒業生向けに相談内容の投稿、閲覧、回答ができるコミュニティプラットフォームです。ユーザーは相談や質問、回答、タグ付け等の機能を利用できます。</p>
+    
+    <h2>第2条（適用）</h2>
     <p>本規約は，ユーザーと運営との間の本サービスの利用に関わる一切の関係に適用されるものとします。</p>
 
-    <h2>第2条（利用登録）</h2>
-    <p>登録希望者が当社の定める方法によって利用登録を申請し，運営がこれを承認することによって，利用登録が完了するものとします。</p>
+    <h2>第3条（利用登録）</h2>
+    <p>本サービスの利用には、Firebase Authenticationによるアカウント登録が必要です。登録希望者が当社の定める方法によって利用登録を申請し，運営がこれを承認することによって，利用登録が完了するものとします。</p>
 
-    <h2>第3条（禁止事項）</h2>
+    <h2>第4条（ユーザー投稿コンテンツ）</h2>
+    <p>1. 本サービスへの投稿（質問、回答、コメント等）の著作権は原則として投稿者に帰属します。ただし、投稿者は、運営が本サービス内外で投稿内容を利用、表示、配信、翻訳等する非独占的な権利を許諾します。<br>2. 運営は投稿内容を編集、削除、表示制限できる権利を有します。</p>
+
+    <h2>第5条（禁止事項）</h2>
     <p>ユーザーは，本サービスの利用にあたり，以下の行為をしてはなりません。</p>
     <ul>
       <li>法令または公序良俗に違反する行為</li>
@@ -53,12 +59,25 @@
       <li>本サービスの運営を妨害するおそれのある行為</li>
     </ul>
 
-    <h2>第4条（免責事項）</h2>
+    <h2>第6条（投稿内容の責任）</h2>
+    <p>ユーザーは自己の責任において投稿を行うものとし、運営は投稿内容・回答の正確性や有用性について一切保証しません。投稿された相談内容・回答に関して生じた損害について運営は責任を負いません。</p>
+
+    <h2>第7条（メール通知・連絡）</h2>
+    <p>ユーザーと運営との間の通知または連絡は，運営の定める方法によって行うものとします。運営は,ユーザーから,運営が別途定める方式に従った変更届け出がない限り,現在登録されている連絡先が有効なものとみなして当該連絡先へ通知または連絡を行い,これらは,発信時にユーザーへ到達したものとみなします。</p>
+  
+    <h2>第8条（サービスの変更・停止・終了）</h2>
+    <p>運営は本サービスの内容を予告なく変更、停止、または終了する権利を有し、ユーザーはこれにより生じた損害について運営が責任を負わないことに同意します。</p>
+    
+    <h2>第9条（免責事項）</h2>
     <p>運営は，本サービスに事実上または法律上の瑕疵（安全性，信頼性，正確性，完全性，有効性，特定の目的への適合性，セキュリティなどに関する欠陥，エラーやバグ，権利侵害などを含みます。）がないことを明示的にも黙示的にも保証しておりません。</p>
 
-    <h2>第5条（通知または連絡）</h2>
-    <p>ユーザーと運営との間の通知または連絡は，運営の定める方法によって行うものとします。運営は,ユーザーから,運営が別途定める方式に従った変更届け出がない限り,現在登録されている連絡先が有効なものとみなして当該連絡先へ通知または連絡を行い,これらは,発信時にユーザーへ到達したものとみなします。</p>
+    <h2>第10条（規約の変更）</h2>
+    <p>運営は本規約を予告なく変更することがあり、変更後の規約は本サイトに掲載した時点で効力を生じるものとします。</p>
 
+    <h2>第11条（準拠法・裁判管轄）</h2>
+    <p>本規約は日本法に準拠し、本サービスに関連する紛争は東京地方裁判所または東京簡易裁判所を第一審の専属管轄とします。</p>
+
+    <p>最終更新日2025年12月25日</p>
     <a href="signup.html" class="back-btn">登録画面に戻る</a>
   </main>
 
