--- a/privacy.html
+++ b/privacy.html
@@ -31,53 +31,103 @@
   </header>
 
   <main class="terms-container">
-    <h1>利用規約</h1>
+    <h1>プライバシーポリシー</h1>
 
-    <p>この利用規約（以下，「本規約」といいます。）は，SenpaiNet運営チーム（以下，「運営」といいます。）がこのウェブサイト上で提供するサービス（以下，「本サービス」といいます。）の利用条件を定めるものです。登録ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本サービスをご利用いただきます。</p>
+<p>
+SenpaiNet運営チーム（以下「運営」といいます）は、本ウェブサイトおよび関連サービス（以下「本サービス」）において、
+ユーザーの個人情報を適切に取り扱うことを重要な責務と考え、以下のプライバシーポリシーを定めます。
+</p>
 
-    <h2>第1条（サービス内容）</h2>
-    <p>本サービスは、在校生・卒業生向けに相談内容の投稿、閲覧、回答ができるコミュニティプラットフォームです。ユーザーは相談や質問、回答、タグ付け等の機能を利用できます。</p>
-    
-    <h2>第2条（適用）</h2>
-    <p>本規約は，ユーザーと運営との間の本サービスの利用に関わる一切の関係に適用されるものとします。</p>
+<hr>
 
-    <h2>第3条（利用登録）</h2>
-    <p>本サービスの利用には、Firebase Authenticationによるアカウント登録が必要です。登録希望者が当社の定める方法によって利用登録を申請し，運営がこれを承認することによって，利用登録が完了するものとします。</p>
+<h2>第1条（取得する情報）</h2>
+<p>運営は、本サービスの提供にあたり、以下の情報を取得することがあります。</p>
+<ul>
+  <li>メールアドレス</li>
+  <li>ニックネーム、学年・卒業年度、区分（在校生・卒業生）</li>
+  <li>投稿内容、回答内容、タグ情報</li>
+  <li>Firebase Authentication によって発行されるユーザー識別子（UID）</li>
+  <li>アクセスログ、IPアドレス、ブラウザ情報などの技術情報</li>
+</ul>
 
-    <h2>第4条（ユーザー投稿コンテンツ）</h2>
-    <p>1. 本サービスへの投稿（質問、回答、コメント等）の著作権は原則として投稿者に帰属します。ただし、投稿者は、運営が本サービス内外で投稿内容を利用、表示、配信、翻訳等する非独占的な権利を許諾します。<br>2. 運営は投稿内容を編集、削除、表示制限できる権利を有します。</p>
+<h2>第2条（利用目的）</h2>
+<p>取得した情報は、以下の目的で利用します。</p>
+<ul>
+  <li>アカウント登録、本人確認、ログイン認証のため</li>
+  <li>相談投稿・回答・閲覧など本サービスの提供・運営のため</li>
+  <li>投稿への返信通知や重要なお知らせ等のメール送信のため</li>
+  <li>不正行為の防止、セキュリティ向上のため</li>
+  <li>本サービスの改善、利用状況の分析のため</li>
+</ul>
 
-    <h2>第5条（禁止事項）</h2>
-    <p>ユーザーは，本サービスの利用にあたり，以下の行為をしてはなりません。</p>
-    <ul>
-      <li>法令または公序良俗に違反する行為</li>
-      <li>犯罪行為に関連する行為</li>
-      <li>本サービスの内容等，本サービスに含まれる著作権商標権ほか知的財産権を侵害する行為</li>
-      <li>他のユーザー，またはその他第三者の個人情報を収集または蓄積する行為</li>
-      <li>不正アクセスをし，またはこれを試みる行為</li>
-      <li>他のユーザーに成りすます行為</li>
-      <li>本サービスの運営を妨害するおそれのある行為</li>
-    </ul>
+<h2>第3条（個人情報の管理）</h2>
+<p>
+運営は、取得した個人情報について、不正アクセス、紛失、漏えい、改ざん等を防止するため、
+適切な安全管理措置を講じます。
+</p>
 
-    <h2>第6条（投稿内容の責任）</h2>
-    <p>ユーザーは自己の責任において投稿を行うものとし、運営は投稿内容・回答の正確性や有用性について一切保証しません。投稿された相談内容・回答に関して生じた損害について運営は責任を負いません。</p>
+<h2>第4条（外部サービスの利用）</h2>
+<p>
+本サービスでは、以下の外部サービスを利用しています。
+</p>
+<ul>
+  <li>Google Firebase（Authentication、Firestore、Analytics など）</li>
+</ul>
+<p>
+これらのサービスにより取得される情報は、各サービス提供者のプライバシーポリシーに基づいて管理されます。
+</p>
 
-    <h2>第7条（メール通知・連絡）</h2>
-    <p>ユーザーと運営との間の通知または連絡は，運営の定める方法によって行うものとします。運営は,ユーザーから,運営が別途定める方式に従った変更届け出がない限り,現在登録されている連絡先が有効なものとみなして当該連絡先へ通知または連絡を行い,これらは,発信時にユーザーへ到達したものとみなします。</p>
-  
-    <h2>第8条（サービスの変更・停止・終了）</h2>
-    <p>運営は本サービスの内容を予告なく変更、停止、または終了する権利を有し、ユーザーはこれにより生じた損害について運営が責任を負わないことに同意します。</p>
-    
-    <h2>第9条（免責事項）</h2>
-    <p>運営は，本サービスに事実上または法律上の瑕疵（安全性，信頼性，正確性，完全性，有効性，特定の目的への適合性，セキュリティなどに関する欠陥，エラーやバグ，権利侵害などを含みます。）がないことを明示的にも黙示的にも保証しておりません。</p>
+<h2>第5条（第三者提供）</h2>
+<p>
+運営は、以下の場合を除き、ユーザーの個人情報を第三者に提供することはありません。
+</p>
+<ul>
+  <li>本人の同意がある場合</li>
+  <li>法令に基づく開示請求があった場合</li>
+  <li>人命や財産の保護のために必要で、本人の同意を得ることが困難な場合</li>
+</ul>
 
-    <h2>第10条（規約の変更）</h2>
-    <p>運営は本規約を予告なく変更することがあり、変更後の規約は本サイトに掲載した時点で効力を生じるものとします。</p>
+<h2>第6条（ユーザー投稿情報について）</h2>
+<p>
+ユーザーが本サービス上に投稿した相談内容や回答は、他のユーザーに公開される場合があります。
+投稿内容に個人情報が含まれないよう、ユーザー自身が十分注意するものとします。
+</p>
 
-    <h2>第11条（準拠法・裁判管轄）</h2>
-    <p>本規約は日本法に準拠し、本サービスに関連する紛争は東京地方裁判所または東京簡易裁判所を第一審の専属管轄とします。</p>
+<h2>第7条（メール通知について）</h2>
+<p>
+ユーザーは、アカウント登録時および設定により、投稿への返信通知や運営からのお知らせを
+メールで受信する場合があります。
+</p>
 
-    <p>最終更新日2025年12月25日</p>
+<h2>第8条（個人情報の開示・訂正・削除）</h2>
+<p>
+ユーザーは、自身の個人情報について、開示・訂正・削除を求めることができます。
+希望される場合は、お問い合わせフォームよりご連絡ください。
+</p>
+
+<h2>第9条（クッキー（Cookie）等の利用）</h2>
+<p>
+本サービスでは、利便性向上や利用状況分析のため、Cookieや類似技術を使用する場合があります。
+これにより個人を特定する情報を直接取得することはありません。
+</p>
+
+<h2>第10条（未成年者の利用）</h2>
+<p>
+未成年のユーザーは、保護者の同意を得た上で本サービスを利用するものとします。
+</p>
+
+<h2>第11条（プライバシーポリシーの変更）</h2>
+<p>
+運営は、本ポリシーの内容を予告なく変更することがあります。
+変更後のポリシーは、本サイトに掲載した時点で効力を生じます。
+</p>
+
+<h2>第12条（お問い合わせ）</h2>
+<p>
+本ポリシーに関するお問い合わせは、SenpaiNetのお問い合わせフォームよりご連絡ください。
+</p>
+
+<p>最終更新日：2025年12月25日</p>
     <a href="signup.html" class="back-btn">登録画面に戻る</a>
   </main>
 
