--- a/profile.html
+++ b/profile.html
@@ -325,7 +325,11 @@
         </p>
       </div>
     </section>
-
+    <section class="content-card" style="border:1px solid #fee2e2; background:#fffafb; margin-top:50px;">
+      <div class="card-header"><div class="card-title" style="color:#ef4444;"><span>⚠️</span>アカウントの削除</div></div>
+      <p style="font-size:0.85rem; color:#64748b; margin:15px 0;">退会するとデータは完全に削除され、復元できません。</p>
+      <button id="deleteAccountBtn" style="background:#ef4444; color:white; border:none; padding:12px 24px; border-radius:8px; font-weight:bold; cursor:pointer;">アカウントを完全に削除する</button>
+    </section>
   </main>
 
   <div class="cropper-modal-overlay" id="cropperModal">
@@ -344,5 +348,6 @@
   <script type="module" src="profile.js"></script>
 </body>
 </html>
+
 
 
