--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>SenpaiNet | ISS生用相談プラットフォーム</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <meta name="google-site-verification" content="Dqo6375BAnL3jlVmVzRTMrkuK4b4hJeJFSxJ-XGmo6U" />
 </head>
 
 <body>
@@ -144,6 +145,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
