--- a/detail2.html
+++ b/detail2.html
@@ -208,7 +208,7 @@
             </div>
 
             <form id="answerForm">
-                <textarea id="answerInput" placeholder="Markown記法が使えます。&#10;数式は $...$ で囲んでください。" required></textarea>
+                <textarea id="answerInput" placeholder="回答を入力してください" required></textarea>
                 <div class="form-controls">
                     <label class="anon-check">
                         <input type="checkbox" id="anonCheck">
