--- a/index.html
+++ b/index.html
@@ -140,9 +140,28 @@
   </div>
   <p style="margin-top: 30px; color: #64748b; font-size: 0.8rem;">© 2025 SenpaiNet. All Rights Reserved.</p>
 </footer>
-<script src="script.js"></script>
+<footer>
+  © 2025 SenpaiNet | All Rights Reserved.
+</footer>
+<script type="module" src="auth_header.js"></script>
+<footer style="background: #1e293b; color: white; padding: 40px 20px; text-align: center; margin-top: 50px;">
+  <div style="margin-bottom: 20px;">
+    <a href="index.html" style="color: white; text-decoration: none; font-weight: bold; font-size: 1.2rem;">SenpaiNet</a>
+  </div>
+  <div style="display: flex; justify-content: center; gap: 20px; font-size: 0.9rem;">
+    <a href="terms.html" style="color: #94a3b8; text-decoration: none;">利用規約</a>
+    <a href="privacy.html" style="color: #94a3b8; text-decoration: none;">プライバシーポリシー</a>
+    <a href="form.html" style="color: #94a3b8; text-decoration: none;">お問い合わせ</a>
+  </div>
+  <p style="margin-top: 30px; color: #64748b; font-size: 0.8rem;">© 2025 SenpaiNet. All Rights Reserved.</p>
+</footer>
+
+<script type="module" src="script.js"></script>
 </body>
 </html>
+</body>
+</html>
+
 
 
 
