--- a/terms.html
+++ b/terms.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>プライバシーポリシー | SenpaiNet</title>
+  <title>利用規約 | SenpaiNet</title>
   <link rel="stylesheet" href="style.css">
   <style>
     .terms-container {
