--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>SenpaiNet | ISS生用相談プラットフォーム</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <meta name="google-site-verification" content="YevrSF85kG0BsL1AhoByfy-CU_ANFOKL_flTYYireIk" />
 </head>
 
 <body>
@@ -132,6 +133,7 @@
 </html>
 </body>
 </html>
+
 
 
 
