--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <a href="archive.html" class="btn sub">詳しく見る</a>
     </div>
 
-    <p class="email">メール: issjukensoudandokoro@gmail.com</p>
+    <p class="email">メール: senpainet.iss@gmail.com</p>
   </div>
 
   <div class="hero-right slide-right">
@@ -133,6 +133,7 @@
 </html>
 </body>
 </html>
+
 
 
 
