--- a/post.html
+++ b/post.html
@@ -115,7 +115,7 @@
         </div>
         
         <div id="precautions-area" style="margin-bottom: 20px; padding: 15px; border: 1px solid #ccc; background-color: #f9f9f9; border-radius: 5px;">
-            <p style="font-weight: bold; margin-top: 0;">【投稿に関する注意事項】</p>
+            <p style="font-weight: bold; margin-top: 0;">⚠️【投稿に関する注意事項】⚠️</p>
             <ul style="font-size: 0.9em; margin-bottom: 15px;">
                 <li>他人を誹謗中傷する内容や不適切な表現は控えてください。</li>
                 <li>個人情報（本名、住所、電話番号など）を書き込まないでください。</li>
@@ -139,5 +139,6 @@
 <script type="module" src="post.js"></script>
 </body>
 </html>
+
 
 
