--- a/post.html
+++ b/post.html
@@ -113,7 +113,42 @@
             <span class="tag-option" data-tag="その他">#その他</span>
           </div>
         </div>
-
+        <style>
+            #precautions-area {
+                background-color: #fff9e6;
+                border: 1px solid #ffe58f;
+                border-radius: 8px;
+                padding: 15px;
+                margin: 20px 0;
+                font-family: sans-serif;
+            }
+            .agree-label {
+                display: flex;
+                align-items: center;
+                gap: 10px;
+                cursor: pointer;
+                font-weight: bold;
+            }
+            /* ボタンが押せない時の見た目 */
+            #submit-btn:disabled {
+                background-color: #ccc !important;
+                cursor: not-allowed;
+                opacity: 0.6;
+            }
+        </style>
+        
+        <div id="precautions-area">
+            <p style="margin-top:0; color:#856404;"><b>⚠️ 投稿前の確認</b></p>
+            <ul style="font-size: 0.9em; color: #555;">
+                <li>誹謗中傷や不適切な内容を含んでいませんか？</li>
+                <li>個人情報を入力していませんか？</li>
+                <li>一度公開すると削除できない場合があります。</li>
+            </ul>
+            <label class="agree-label">
+                <input type="checkbox" id="agree-checkbox">
+                <span>以上の内容を理解しました</span>
+            </label>
+        </div>
         <button type="submit" class="submit-btn">🚀 投稿する</button>
       </form>
       <a href="archive.html" class="back-link">← 一覧に戻る</a>
@@ -124,3 +159,4 @@
 <script type="module" src="post.js"></script>
 </body>
 </html>
+
