--- a/post.html
+++ b/post.html
@@ -149,6 +149,8 @@
                 <span>以上の内容を理解しました</span>
             </label>
         </div>
+        <button type="submit" id="submit-btn">🚀 相談する</button>
+        <button type="submit" id="submit-btn" disabled>🚀 相談する</button>
         <button type="submit" class="submit-btn">🚀 投稿する</button>
       </form>
       <a href="archive.html" class="back-link">← 一覧に戻る</a>
@@ -159,4 +161,5 @@
 <script type="module" src="post.js"></script>
 </body>
 </html>
+
 
