--- a/post.html
+++ b/post.html
@@ -142,15 +142,9 @@
             <ul style="font-size: 0.9em; color: #555;">
                 <li>誹謗中傷や不適切な内容を含んでいませんか？</li>
                 <li>個人情報を入力していませんか？</li>
-                <li>一度公開すると削除できない場合があります。</li>
+                <li>卒業生の回答は必ずしも正しいとは限りません。ご了承ください。</li>
             </ul>
-            <label class="agree-label">
-                <input type="checkbox" id="agree-checkbox">
-                <span>以上の内容を理解しました</span>
-            </label>
         </div>
-        <button type="submit" class="submit-btn">🚀 相談する</button>
-        <button type="submit" class="submit-btn" disabled>🚀 相談する</button>
         <button type="submit" class="submit-btn">🚀 投稿する</button>
       </form>
       <a href="archive.html" class="back-link">← 一覧に戻る</a>
@@ -161,6 +155,7 @@
 <script type="module" src="post.js"></script>
 </body>
 </html>
+
 
 
 
