--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a href="post.html">相談する</a>
       <a href="archive.html">相談を見る</a>
       <a href="senpai.html">先輩一覧</a>
-      <a href="#">お問い合わせ</a>
+      <a href="contact.html">お問い合わせ</a>
       <a href="signup.html" class="account-btn">👤 アカウント</a>
     </nav>
   </div>
@@ -132,6 +132,7 @@
 <script type="module" src="script.js"></script>
 </body>
 </html>
+
 
 
 
