--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,23 @@
     <title>お問い合わせ - SenpaiNet</title>
     <link rel="stylesheet" href="contact.css">
 </head>
-<body>
 
+<body>
+<header class="navbar fade-down">
+  <div class="navbar-container">
+    <div class="navbar-logo">SenpaiNet</div>
+
+    <nav class="navbar-menu">
+     
+      <a href="post.html">相談する</a>
+      <a href="archive.html">相談を見る</a>
+      <a href="senpai.html">先輩一覧</a>
+      <a href="contact.html">お問い合わせ</a>
+      <a href="signup.html" class="account-btn">👤 アカウント</a>
+    </nav>
+  </div>
+</header>
+    
     <div class="contact-card">
         <h2>お問い合わせ</h2>
         <p class="description">サービスに関するご意見・不具合などは、以下のフォームよりお気軽にご連絡ください。</p>
